feat: upgrade Spring Boot to 4.0.0
## Changes

### Core Dependencies
- Upgrade Spring Boot from 3.5.7 to 4.0.0
- Update Jackson from com.fasterxml.jackson to tools.jackson
- Migrate JavaTimeModule to new package structure

### Jackson Configuration
- Refactor JacksonConfiguration to use JsonMapper.builder()
- Move Long type serialization from Jackson2ObjectMapperBuilderCustomizer to JavaTimeModule
- Add MapperFeature.SORT_PROPERTIES_ALPHABETICALLY and JsonWriteFeature.ESCAPE_NON_ASCII
- Update imports to tools.jackson.databind.*

### Security Module
- Add @NullMarked and null safety checks to CaffeineAuthenticationCache
- Use getIfPresent() instead of get() for better null handling
- Improve null parameter validation in all cache methods
- Update AuthenticationCache interface with @Nullable annotations

### Elasticsearch Module
- Remove deprecated shore-elasticsearch module (no longer compatible with Spring Boot 4.0)
- Remove related auto-configuration and test files

### Web Module
- Remove duplicate JacksonConfiguration (moved to shore-core)

### Build Configuration
- Update gradle/libs.versions.toml with Spring Boot 4.0.0
- Update shore-commons and shore-core build.gradle files

### Tests
- Update JacksonConfigurationTest for new JsonMapper API
- Update JavaTimeModuleTest for new package structure
- Update WebClientConfigurationTest

## Breaking Changes
- **Elasticsearch module removed**: Users relying on shore-elasticsearch will need to migrate to Spring Boot 4.0's native Elasticsearch support or use a different library

## Migration Notes
- Jackson's new  packages are used instead of
- Long type serialization is now handled in JavaTimeModule instead of a separate customizer
- All cache methods now include null safety checks

## Testing
- All unit tests updated to match new API
- Manual testing recommended before merge

## Related
- Spring Boot 4.0 Migration Guide: https://spring.io/blog/2024/...
- Jackson 3.0 Migration: https://github.com/FasterXML/jackson-data

--- a/shore-commons/build.gradle
+++ b/shore-commons/build.gradle
@@ -6,7 +6,7 @@ plugins {
 description "shore commons packages"
 
 dependencies {
-    api "com.fasterxml.jackson.core:jackson-databind"
+    api "tools.jackson.core:jackson-databind"
     api "jakarta.validation:jakarta.validation-api"
     api "org.springframework:spring-web"
     compileOnly "org.springframework:spring-context"
