fix: add spring-boot-starter-aop to libs.versions.toml and update shore-limit build.gradle

--- a/shore-starters/shore-limit/build.gradle
+++ b/shore-starters/shore-limit/build.gradle
@@ -3,7 +3,7 @@ description "shore limit starter"
 dependencies {
     optional project(":shore-core")
     optional project(":shore-starters:shore-security")
-    api "org.redisson:redisson-spring-boot-starter"
-    optional "org.springframework.boot:spring-boot-starter-aop"
-    optional "org.springframework.boot:spring-boot-autoconfigure"
+    api libs.redisson.starter
+    optional libs.spring.boot.starter.aop
+    optional libs.spring.boot.starter.autoconfigure
 }
