--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,6 +44,8 @@ opentelemetry-extension = { group = "io.opentelemetry.instrumentation", name = "
 reactor-rabbitmq = { group = "io.projectreactor.rabbitmq", name = "reactor-rabbitmq", version.ref = "reactorRabbitmq" }
 reactor-kafka = { group = "io.projectreactor.kafka", name = "reactor-kafka", version.ref = "reactorKafka" }
 swagger-v3-annotations = { group = "io.swagger.core.v3", name = "swagger-annotations-jakarta", version.ref = "swaggerAnnotations" }
+spring-boot-starter-aop = { group = "org.springframework.boot", name = "spring-boot-starter-aop", version.ref = "springBoot" }
+spring-boot-starter-autoconfigure = { group = "org.springframework.boot", name = "spring-boot-starter-autoconfigure", version.ref = "springBoot" }
 squareup-okhttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp3" }
 lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" }
 
